WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256997
[iOS] Tapping "Done" sometimes fails to dismiss the software keyboard after dismissing AutoFill UI
https://bugs.webkit.org/show_bug.cgi?id=256997
Summary
[iOS] Tapping "Done" sometimes fails to dismiss the software keyboard after d...
Wenson Hsieh
Reported
2023-05-18 17:33:56 PDT
rdar://109413302
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-05-18 18:54:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14053
EWS
Comment 2
2023-05-18 23:20:33 PDT
Committed
264235@main
(3315d8e5237e): <
https://commits.webkit.org/264235@main
> Reviewed commits have been landed. Closing PR #14053 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug